<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teks_nama_lengkap"
            android:textColor="@color/warnateksjudul"
            android:textSize="@dimen/ukuran17sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_namalengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/edit_namalengkap_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teks_tanggal_lahir"
            android:textColor="@color/warnateksjudul"
            android:textSize="@dimen/ukuran17sp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/teks_isian_tanggalahir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_tanggalahir_hint"
                android:maxLines="1"
                android:textColor="@color/warnatekssubjudul"
                android:textSize="@dimen/ukuran17sp"/>

            <Button
                android:id="@+id/tombol_setelkalender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/tombol_teks_setel"/>


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/tombol_cek_lahir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:text="@string/tombol_cek_tanggal_lahir"/>

</LinearLayout>